--- a/aoc.ipynb
+++ b/aoc.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,8 @@
    "source": [
     "## 2022\n",
     "[Day 1: Calorie Counting](#day-1-calorie-counting)  \n",
-    "[Day 2: Rock Paper Scissors](#day-2-rock-paper-scissors)  "
+    "[Day 2: Rock Paper Scissors](#day-2-rock-paper-scissors)  \n",
+    "[Day 3: Rucksack Reorganizing](#day-3-rucksack-reorganizing)"
    ]
   },
   {
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -316,6 +317,268 @@
     "my_points2 = day2_2022.get_points(strategy_guide_int2)\n",
     "total_points2 = day2_2022.get_total(my_points2)\n",
     "print(\"Now if everything goes to plan I have\", total_points2, \"points\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Day 3: Rucksack Reorganizing"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Part 1: Mis-sorted Rucksacks"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One Elf has the important job of loading all of the rucksacks with supplies for the jungle journey. Unfortunately, that Elf didn't quite follow the packing instructions, and so a few items now need to be rearranged.\n",
+    "\n",
+    "Each rucksack has two large compartments. All items of a given type are meant to go into exactly one of the two compartments. The Elf that did the packing failed to follow this rule for exactly one item type per rucksack.\n",
+    "\n",
+    "The Elves have made a list of all of the items currently in each rucksack (your puzzle input), but they need your help finding the errors. Every item type is identified by a single lowercase or uppercase letter (that is, a and A refer to different types of items).\n",
+    "\n",
+    "The list of items for each rucksack is given as characters all on a single line. A given rucksack always has the same number of items in each of its two compartments, so the first half of the characters represent items in the first compartment, while the second half of the characters represent items in the second compartment.\n",
+    "\n",
+    "For example, suppose you have the following list of contents from six rucksacks:\n",
+    "\n",
+    "* vJrwpWtwJgWrhcsFMMfFFhFp\n",
+    "* jqHRNqRjqzjGDLGLrsFMfFZSrLrFZsSL\n",
+    "* PmmdzqPrVvPwwTWBwg\n",
+    "* wMqvLMZHhHMvwLHjbvcjnnSBnvTQFn\n",
+    "* ttgJtRGJQctTZtZT\n",
+    "* CrZsJsPPZsGzwwsLwLmpwMDw   \n",
+    "\n",
+    "The first rucksack contains the items vJrwpWtwJgWrhcsFMMfFFhFp, which means its first compartment contains the items vJrwpWtwJgWr, while the second compartment contains the items hcsFMMfFFhFp. The only item type that appears in both compartments is lowercase p.  \n",
+    "The second rucksack's compartments contain jqHRNqRjqzjGDLGL and rsFMfFZSrLrFZsSL. The only item type that appears in both compartments is uppercase L.  \n",
+    "The third rucksack's compartments contain PmmdzqPrV and vPwwTWBwg; the only common item type is uppercase P.  \n",
+    "The fourth rucksack's compartments only share item type v.  \n",
+    "The fifth rucksack's compartments only share item type t.  \n",
+    "The sixth rucksack's compartments only share item type s.  \n",
+    "To help prioritize item rearrangement, every item type can be converted to a priority:  \n",
+    "\n",
+    "Lowercase item types a through z have priorities 1 through 26.  \n",
+    "Uppercase item types A through Z have priorities 27 through 52.  \n",
+    "In the above example, the priority of the item type that appears in both compartments of each rucksack is 16 (p), 38 (L), 42 (P), 22 (v), 20 (t), and 19 (s); the sum of these is 157.  \n",
+    "\n",
+    "Find the item type that appears in both compartments of each rucksack. What is the sum of the priorities of those item types?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mis-sorted items have a total priority of 7553\n"
+     ]
+    }
+   ],
+   "source": [
+    "from year_2022.day3 import day3_2022\n",
+    "importlib.reload(day3_2022)\n",
+    "\n",
+    "rucksacks = day3_2022.read_input(\"./year_2022/day3/inputs/input.txt\")\n",
+    "priority_sum = day3_2022.complete_part1(rucksacks)\n",
+    "print(\"The mis-sorted items have a total priority of\", priority_sum)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Part 2: Identifying groups"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you finish identifying the misplaced items, the Elves come to you with another issue.\n",
+    "\n",
+    "For safety, the Elves are divided into groups of three. Every Elf carries a badge that identifies their group. For efficiency, within each group of three Elves, the badge is the only item type carried by all three Elves. That is, if a group's badge is item type B, then all three Elves will have item type B somewhere in their rucksack, and at most two of the Elves will be carrying any other item type.\n",
+    "\n",
+    "The problem is that someone forgot to put this year's updated authenticity sticker on the badges. All of the badges need to be pulled out of the rucksacks so the new authenticity stickers can be attached.\n",
+    "\n",
+    "Additionally, nobody wrote down which item type corresponds to each group's badges. The only way to tell which item type is the right one is by finding the one item type that is common between all three Elves in each group.\n",
+    "\n",
+    "Every set of three lines in your list corresponds to a single group, but each group can have a different badge item type. So, in the above example, the first group's rucksacks are the first three lines:\n",
+    "\n",
+    "vJrwpWtwJgWrhcsFMMfFFhFp\n",
+    "jqHRNqRjqzjGDLGLrsFMfFZSrLrFZsSL\n",
+    "PmmdzqPrVvPwwTWBwg\n",
+    "And the second group's rucksacks are the next three lines:\n",
+    "\n",
+    "wMqvLMZHhHMvwLHjbvcjnnSBnvTQFn\n",
+    "ttgJtRGJQctTZtZT\n",
+    "CrZsJsPPZsGzwwsLwLmpwMDw\n",
+    "In the first group, the only item type that appears in all three rucksacks is lowercase r; this must be their badges. In the second group, their badge item type must be Z.\n",
+    "\n",
+    "Priorities for these items must still be found to organize the sticker attachment efforts: here, they are 18 (r) for the first group and 52 (Z) for the second group. The sum of these is 70.\n",
+    "\n",
+    "Find the item type that corresponds to the badges of each three-Elf group. What is the sum of the priorities of those item types?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum priority of each badge group is 2758\n"
+     ]
+    }
+   ],
+   "source": [
+    "badges_sum = day3_2022.complete_part2(rucksacks)\n",
+    "print(\"The sum priority of each badge group is\", badges_sum)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Day 4: Camp Cleanup"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Part 1: Full Overlaps"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Space needs to be cleared before the last supplies can be unloaded from the ships, and so several Elves have been assigned the job of cleaning up sections of the camp. Every section has a unique ID number, and each Elf is assigned a range of section IDs.\n",
+    "\n",
+    "However, as some of the Elves compare their section assignments with each other, they've noticed that many of the assignments overlap. To try to quickly find overlaps and reduce duplicated effort, the Elves pair up and make a big list of the section assignments for each pair (your puzzle input).\n",
+    "\n",
+    "For example, consider the following list of section assignment pairs:  \n",
+    "2-4,6-8  \n",
+    "2-3,4-5  \n",
+    "5-7,7-9  \n",
+    "2-8,3-7  \n",
+    "6-6,4-6  \n",
+    "2-6,4-8    \n",
+    "For the first few pairs, this list means:\n",
+    "\n",
+    "Within the first pair of Elves, the first Elf was assigned sections 2-4 (sections 2, 3, and 4), while the second Elf was assigned sections 6-8 (sections 6, 7, 8).  \n",
+    "The Elves in the second pair were each assigned two sections.  \n",
+    "The Elves in the third pair were each assigned three sections: one got sections 5, 6, and 7, while the other also got 7, plus 8 and 9.  \n",
+    "This example list uses single-digit section IDs to make it easier to draw; your actual list might contain larger numbers. Visually, these pairs of section assignments look like this:  \n",
+    ".234.....  2-4  \n",
+    ".....678.  6-8 \n",
+    "\n",
+    ".23......  2-3  \n",
+    "...45....  4-5\n",
+    "\n",
+    "....567..  5-7  \n",
+    "......789  7-9\n",
+    "\n",
+    ".2345678.  2-8  \n",
+    "..34567..  3-7\n",
+    "\n",
+    ".....6...  6-6  \n",
+    "...456...  4-6\n",
+    "\n",
+    ".23456...  2-6  \n",
+    "...45678.  4-8\n",
+    "\n",
+    "Some of the pairs have noticed that one of their assignments fully contains the other. For example, 2-8 fully contains 3-7, and 6-6 is fully contained by 4-6. In pairs where one assignment fully contains the other, one Elf in the pair would be exclusively cleaning sections their partner will already be cleaning, so these seem like the most in need of reconsideration. In this example, there are 2 such pairs.\n",
+    "\n",
+    "In how many assignment pairs does one range fully contain the other?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from year_2022.day4 import day4_2022\n",
+    "importlib.reload(day4_2022)\n",
+    "\n",
+    "cleaning_list = day4_2022.read_input(\"./year_2022/day4/inputs/test_input.txt\")\n",
+    "print(cleaning_list)\n",
+    "full_overlaps = day4_2022.determine_full_overlap(cleaning_list)\n",
+    "print(\"There were\", full_overlaps, \"pairs that fully overlapped\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Part 2: Partial Overlaps"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It seems like there is still quite a bit of duplicate work planned. Instead, the Elves would like to know the number of pairs that overlap at all.\n",
+    "\n",
+    "In the above example, the first two pairs (2-4,6-8 and 2-3,4-5) don't overlap, while the remaining four pairs (5-7,7-9, 2-8,3-7, 6-6,4-6, and 2-6,4-8) do overlap:\n",
+    "\n",
+    "5-7,7-9 overlaps in a single section, 7.  \n",
+    "2-8,3-7 overlaps all of the sections 3 through 7.  \n",
+    "6-6,4-6 overlaps in a single section, 6.  \n",
+    "2-6,4-8 overlaps in sections 4, 5, and 6.  \n",
+    "So, in this example, the number of overlapping assignment pairs is 4.\n",
+    "\n",
+    "In how many assignment pairs do the ranges overlap?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There were 0 pairs that partially overlapped\n"
+     ]
+    }
+   ],
+   "source": [
+    "partial_overlaps = day4_2022.determine_any_overlap(cleaning_list)\n",
+    "print(\"There were\", partial_overlaps, \"pairs that partially overlapped\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While solving this first part of the puzzle I split the line into the two corresponding pairs. Therefore 1-73,1-99 would become [1, 73] and [1, 99]. I then checked to see if 99 was greater than or equal to 73. As 99 > 73 I then check to see if 1 was less than or equal to 1. As both were true, I counted this line as being fully overlapped.\n",
+    "\n",
+    "However, I was not getting the correct answer with the full input. So I referred to [another person's solution](https://github.com/PodolskiBartosz/advent-of-code-2022/blob/main/day-4/main.py) My thought process was very similar to this person's so I checked to see if I was overthinking the cases. This solution still did not work. After some print statements I realized that I forgot to convert the type from str to int at which point my solution worked.  \n",
+    "This change meant that I correctly answered part 2 on the first try."
    ]
   }
  ],
