--- a/aoc.ipynb
+++ b/aoc.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,9 @@
     "## 2022\n",
     "[Day 1: Calorie Counting](#day-1-calorie-counting)  \n",
     "[Day 2: Rock Paper Scissors](#day-2-rock-paper-scissors)  \n",
-    "[Day 3: Rucksack Reorganizing](#day-3-rucksack-reorganizing)"
+    "[Day 3: Rucksack Reorganizing](#day-3-rucksack-reorganizing)  \n",
+    "[Day 4: Camp Cleanup](#day-4-camp-cleanup)  \n",
+    "[Day 5: Supply Stacks](#day-5-supply-stacks)"
    ]
   },
   {
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -513,15 +515,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There were 602 pairs that fully overlapped\n"
+     ]
+    }
+   ],
    "source": [
     "from year_2022.day4 import day4_2022\n",
     "importlib.reload(day4_2022)\n",
     "\n",
-    "cleaning_list = day4_2022.read_input(\"./year_2022/day4/inputs/test_input.txt\")\n",
-    "print(cleaning_list)\n",
+    "cleaning_list = day4_2022.read_input(\"./year_2022/day4/inputs/input.txt\")\n",
     "full_overlaps = day4_2022.determine_full_overlap(cleaning_list)\n",
     "print(\"There were\", full_overlaps, \"pairs that fully overlapped\")"
    ]
@@ -554,14 +563,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There were 0 pairs that partially overlapped\n"
+      "There were 891 pairs that partially overlapped\n"
      ]
     }
    ],
@@ -579,6 +588,186 @@
     "\n",
     "However, I was not getting the correct answer with the full input. So I referred to [another person's solution](https://github.com/PodolskiBartosz/advent-of-code-2022/blob/main/day-4/main.py) My thought process was very similar to this person's so I checked to see if I was overthinking the cases. This solution still did not work. After some print statements I realized that I forgot to convert the type from str to int at which point my solution worked.  \n",
     "This change meant that I correctly answered part 2 on the first try."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Day 5: Supply Stacks"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Part 1: Rearranging with One Crate"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The expedition can depart as soon as the final supplies have been unloaded from the ships. Supplies are stored in stacks of marked crates, but because the needed supplies are buried under many other crates, the crates need to be rearranged.\n",
+    "\n",
+    "The ship has a giant cargo crane capable of moving crates between stacks. To ensure none of the crates get crushed or fall over, the crane operator will rearrange them in a series of carefully-planned steps. After the crates are rearranged, the desired crates will be at the top of each stack.\n",
+    "\n",
+    "The Elves don't want to interrupt the crane operator during this delicate procedure, but they forgot to ask her which crate will end up where, and they want to be ready to unload them as soon as possible so they can embark.\n",
+    "\n",
+    "They do, however, have a drawing of the starting stacks of crates and the rearrangement procedure (your puzzle input). For example:  \n",
+    "_ D _  \n",
+    "N C _  \n",
+    "Z M P  \n",
+    "1 2 3  \n",
+    "\n",
+    "move 1 from 2 to 1  \n",
+    "move 3 from 1 to 3  \n",
+    "move 2 from 2 to 1  \n",
+    "move 1 from 1 to 2  \n",
+    "\n",
+    "In this example, there are three stacks of crates. Stack 1 contains two crates: crate Z is on the bottom, and crate N is on top. Stack 2 contains three crates; from bottom to top, they are crates M, C, and D. Finally, stack 3 contains a single crate, P.\n",
+    "\n",
+    "Then, the rearrangement procedure is given. In each step of the procedure, a quantity of crates is moved from one stack to a different stack. In the first step of the above rearrangement procedure, one crate is moved from stack 2 to stack 1, resulting in this configuration:  \n",
+    "D _ _  \n",
+    "N C _  \n",
+    "Z M P  \n",
+    "1 2 3  \n",
+    "\n",
+    "In the second step, three crates are moved from stack 1 to stack 3. Crates are moved one at a time, so the first crate to be moved (D) ends up below the second and third crates:  \n",
+    "_ _ Z  \n",
+    "_ _ N  \n",
+    "_ C D  \n",
+    "_ M P  \n",
+    "1 2 3  \n",
+    "\n",
+    "Then, both crates are moved from stack 2 to stack 1. Again, because crates are moved one at a time, crate C ends up below crate M:  \n",
+    "_ _ Z  \n",
+    "_ _ N  \n",
+    "M _ D  \n",
+    "C _ P  \n",
+    "1 2 3\n",
+    "\n",
+    "Finally, one crate is moved from stack 1 to stack 2:  \n",
+    " _ _ Z  \n",
+    " _ _ N  \n",
+    " _ _ D  \n",
+    " C M P  \n",
+    " 1 2 3  \n",
+    " \n",
+    "The Elves just need to know which crate will end up on top of each stack; in this example, the top crates are C in stack 1, M in stack 2, and Z in stack 3, so you should combine these together and give the Elves the message CMZ.\n",
+    "\n",
+    "After the rearrangement procedure completes, what crate ends up on top of each stack?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "These are the crates at the top: JRVNHHCSJ\n"
+     ]
+    }
+   ],
+   "source": [
+    "from year_2022.day5 import day5_2022\n",
+    "importlib.reload(day5_2022)\n",
+    "\n",
+    "curr_stacks, instructions = day5_2022.read_input(\"./year_2022/day5/input.txt\")\n",
+    "end_stacks = day5_2022.all_movements(curr_stacks, instructions, 1)\n",
+    "tops = day5_2022.determine_top(end_stacks)\n",
+    "print(\"These are the crates at the top:\",tops)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Part 2: Rearranging with Multiple Crates"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you watch the crane operator expertly rearrange the crates, you notice the process isn't following your prediction.\n",
+    "\n",
+    "Some mud was covering the writing on the side of the crane, and you quickly wipe it away. The crane isn't a CrateMover 9000 - it's a CrateMover 9001.\n",
+    "\n",
+    "The CrateMover 9001 is notable for many new and exciting features: air conditioning, leather seats, an extra cup holder, and the ability to pick up and move multiple crates at once.\n",
+    "\n",
+    "Again considering the example above, the crates begin in the same configuration:  \n",
+    "_ D _   \n",
+    "N C _  \n",
+    "Z M P  \n",
+    "1 2 3  \n",
+    "\n",
+    "Moving a single crate from stack 2 to stack 1 behaves the same as before:  \n",
+    "D _ _   \n",
+    "N C _   \n",
+    "Z M P  \n",
+    "1 2 3  \n",
+    "\n",
+    "However, the action of moving three crates from stack 1 to stack 3 means that those three moved crates stay in the same order, resulting in this new configuration:  \n",
+    " _ _ D  \n",
+    " _ _ N  \n",
+    " _ C Z  \n",
+    " _ M P  \n",
+    " 1 2 3\n",
+    "\n",
+    "Next, as both crates are moved from stack 2 to stack 1, they retain their order as well:  \n",
+    " _ _ D  \n",
+    " _ _ N  \n",
+    " C _ Z  \n",
+    " M _ P  \n",
+    " 1 2 3\n",
+    "\n",
+    "Finally, a single crate is still moved from stack 1 to stack 2, but now it's crate C that gets moved:  \n",
+    " _ _ D  \n",
+    " _ _ N  \n",
+    " _ _ Z  \n",
+    " M C P  \n",
+    " 1 2 3  \n",
+    "\n",
+    "In this example, the CrateMover 9001 has put the crates in a totally different order: MCD.\n",
+    "\n",
+    "Before the rearrangement process finishes, update your simulation so that the Elves know where they should stand to be ready to unload the final supplies. After the rearrangement procedure completes, what crate ends up on top of each stack?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "These are the crates at the top: GNFBSBJLH\n"
+     ]
+    }
+   ],
+   "source": [
+    "curr_stacks, instructions = day5_2022.read_input(\"./year_2022/day5/input.txt\")\n",
+    "new_end_stacks = day5_2022.all_movements(curr_stacks, instructions, 2)\n",
+    "new_tops = day5_2022.determine_top(new_end_stacks)\n",
+    "print(\"These are the crates at the top:\",new_tops)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This problem was a headache at first. I had wanted to write a program that would allow me to determine stacks from the input. I couldn't figure out how to do that so I hardcoded it."
    ]
   }
  ],
